--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,7 @@ ja:
      post: 投稿
      group: コミュニティ
      review: レビュー
+     chat: チャット
    attributes:
      user:
        name: 名前
@@ -30,6 +31,8 @@ ja:
      review:
        content: レビュー本文
        score: 点数
+     chat:
+       message: メッセージ
 
 
  time:
