[Add]投稿の非公開機能の追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,10 @@ ja:
     waiting: "対応待ち"
     keep: "保留"
     finish: "対応完了"
+  post:
+   status:
+    public: "公開"
+    private: "非公開"
 
  views:
   pagination:
